cluster-server-01/apps/media/arr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr-service
  namespace: mediaserver
  labels:
    app.kubernetes.io/name: arr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: arr
